options textbox stops wrapping

--- a/Chrome Tools/css/options.css
+++ b/Chrome Tools/css/options.css
@@ -18,4 +18,5 @@ div p {
 textarea {
 	width: 40%;
 	margin: 2%;
+	white-space: nowrap;
 }
